css fix sticky on mobile

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ span {
     justify-content: space-around;
     height: 2700px;
     position: relative;
+    -webkit-overflow-scrolling: touch;
 }
 
 
